--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^30.0.0",
+    "@ckeditor/ckeditor5-vue": "^2.0.1",
     "axios": "^0.21.4",
     "bootstrap": "4.6",
     "core-js": "^3.6.5",
