--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# FrontEnd
 .DS_Store
 node_modules
 /dist
@@ -15,9 +16,168 @@ pnpm-debug.log*
 
 # Editor directories and files
 .idea
-.vscode
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+
+# Server
+# Created by https://www.toptal.com/developers/gitignore/api/flask,react
+# Edit at https://www.toptal.com/developers/gitignore?templates=flask,react
+
+# Created by https://www.toptal.com/developers/gitignore/api/flask
+# Edit at https://www.toptal.com/developers/gitignore?templates=flask
+
+### Flask ###
+server/instance/*
+server/instance/.gitignore
+server/.webassets-cache
+server/.env
+
+### Flask.Python Stack ###
+# Byte-compiled / optimized / DLL files
+server/__pycache__/
+server/*.py[cod]
+server/*$py.class
+
+# C extensions
+server/*.so
+
+# Distribution / packaging
+server/.Python
+server/build/
+server/develop-eggs/
+server/dist/
+server/downloads/
+server/eggs/
+server/.eggs/
+server/lib/
+server/lib64/
+server/parts/
+server/sdist/
+server/var/
+server/wheels/
+server/share/python-wheels/
+server/*.egg-info/
+server/.installed.cfg
+server/*.egg
+server/MANIFEST
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+server/*.manifest
+server/*.spec
+
+# Installer logs
+server/pip-log.txt
+server/pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+server/htmlcov/
+server/.tox/
+server/.nox/
+server/.coverage
+server/.coverage.*
+server/.cache
+server/nosetests.xml
+server/coverage.xml
+server/*.cover
+server/*.py,cover
+server/.hypothesis/
+server/.pytest_cache/
+server/cover/
+
+# Translations
+server/*.mo
+server/*.pot
+
+# Django stuff:
+server/*.log
+server/local_settings.py
+server/db.sqlite3
+server/db.sqlite3-journal
+
+# Flask stuff:
+server/instance/
+
+# Scrapy stuff:
+server/.scrapy
+
+# Sphinx documentation
+server/docs/_build/
+
+# PyBuilder
+server/.pybuilder/
+server/target/
+
+# Jupyter Notebook
+server/.ipynb_checkpoints
+
+# IPython
+server/profile_default/
+server/ipython_config.py
+
+# pyenv
+#   For a library or package, you might want to ignore these files since the code is
+#   intended to run in multiple environments; otherwise, check them in:
+# .python-version
+
+# pipenv
+#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
+#   However, in case of collaboration, if having platform-specific dependencies or dependencies
+#   having no cross-platform support, pipenv may install dependencies that don't work, or not
+#   install all needed dependencies.
+#Pipfile.lock
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+server/__pypackages__/
+
+# Celery stuff
+server/celerybeat-schedule
+server/celerybeat.pid
+
+# SageMath parsed files
+server/*.sage.py
+
+# Environments
+server/.venv
+server/env/
+server/venv/
+server/ENV/
+server/env.bak/
+server/venv.bak/
+
+# Spyder project settings
+server/.spyderproject
+server/.spyproject
+
+# Rope project settings
+server/.ropeproject
+
+# mkdocs documentation
+server/site
+
+# mypy
+server/.mypy_cache/
+server/.dmypy.json
+server/dmypy.json
+
+# Pyre type checker
+server/.pyre/
+
+# pytype static type analyzer
+server/.pytype/
+
+# Cython debug symbols
+server/cython_debug/
+
+# custom addeed
+server/database.py
+server/key.ini
+*__pycache__/
+
+# End of https://www.toptal.com/developers/gitignore/api/flask
+
