--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bootstrap": "4.6",
     "core-js": "^3.6.5",
     "mitt": "^3.0.0",
+    "moment": "^2.29.1",
+    "sweetalert2": "^11.1.9",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
