--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^30.0.0",
+    "@ckeditor/ckeditor5-upload": "^31.0.0",
     "@ckeditor/ckeditor5-vue": "^2.0.1",
     "axios": "^0.21.4",
     "bootstrap": "4.6",
