1128 ckEditor 이미지업로드

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ server/instance/*
 server/instance/.gitignore
 server/.webassets-cache
 server/.env
+server/assets/temp/*
 
 ### Flask.Python Stack ###
 # Byte-compiled / optimized / DLL files
