--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.6.5",
     "mitt": "^3.0.0",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "sweetalert2": "^11.1.9",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12",
