1205 서버 정적 루트로 변경 assets->static

--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ server/instance/*
 server/instance/.gitignore
 server/.webassets-cache
 server/.env
-server/assets/temp/*
+server/static/temp/*
 
 ### Flask.Python Stack ###
 # Byte-compiled / optimized / DLL files
