--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.4",
     "bootstrap": "4.6",
     "core-js": "^3.6.5",
+    "firebase": "^9.6.1",
     "mitt": "^3.0.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
