1223 파이어베이스 초기 설정

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,8 @@
 # npm run build를 실행시, env내용에 아래 변수를 덮어쓴 결과 사용한다
-VUE_APP_SERVER_URL = http://34.127.116.198/
+VUE_APP_SERVER_URL = http://xx.xxx.xxx.xxx/
+
+# fireBase 인증정보
+VUE_APP_KEY = <<apiKey>>
+VUE_AUTH_DOMAIN = <<projectId>>.firebaseapp.com
+VUE_DATABASE_URL = <<projectId>>.firebaseio.com
+VUE_PROJECT_ID = <<projectId>>
