0103 서버에서 파이어베이스 인증구현

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ server/static/temp/*
 server/static/contentImg/*
 !server/static/contentImg/defaultImg
 server/static/userImg/*
+server/*firebase-adminsdk*.json
 
 ### Flask.Python Stack ###
 # Byte-compiled / optimized / DLL files
