0225 개발환경추가

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # npm run build를 실행시, env내용에 아래 변수를 덮어쓴 결과 사용한다
-VUE_APP_SERVER_URL = http://xx.xxx.xxx.xxx:5000/jisuimon
+VUE_APP_SERVER_URL = https://jisuimon.cf:5443/jisuimon
 
 # fireBase 인증정보
 VUE_APP_KEY = <<apiKey>>
