--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ server/instance/.gitignore
 server/.webassets-cache
 server/.env
 server/static/temp/*
+!server/static/temp/test.jpg
 server/static/contentImg/*
 !server/static/contentImg/defaultImg
 server/static/userImg/*
